map crud operations
